# penrose_setup

./: Cargo.toml
src/: easyfocus.rs  hooks.rs  layouts.rs  main.dev.rs  main.rs  main.rs.min  nvim.rs
