[package]
name = "penrose_setup"
version = "0.1.0"
authors = ["Curiosidad-Racional <hecenra@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penrose = { path = "../penrose", features = [ "xcb", "xcb_draw", "keysyms" ] }
# penrose = "^0.2"
simplelog = "^0.8"
xcb = { version = "0.9.0" }
# dirs = "^4.0"
