[package]
name = "penrose_setup"
version = "0.1.0"
authors = ["Curiosidad-Racional <hecenra@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penrose = { path = "../penrose", features = [ "xcb", "xcb_draw", "keysyms" ] }
# penrose = "^0.2"
tracing = { version = "0.1", features = ["attributes", "log"] }
simplelog = "^0.8"
xcb = { version = "0.10.1" }
# dirs = "^4.0"
neovim-lib = "^0.6.1"
